--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,11 +19,44 @@ jobs:
     defaults:
       run:
         shell: bash -l {0}
-        
+
+    # Install terraform
+
     steps:
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v2
       with:
         terraform_version: 1.1.9
         terraform_wrapper: false
+
+    # Install python
+    
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+        
+    - name: Check-out repository
+      uses: actions/checkout@v2
+
+      #- name: Install Python dependencies
+      #  uses: py-actions/py-dependency-install@v4
+    
+    # Install conda
+      
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        miniconda-version: "latest"
+        channels: bioconda, conda-forge, defaults
+        use-only-tar-bz2: true  # IMPORTANT: This needs to be set for caching to work properly!
+        auto-update-conda: true
+        auto-activate-base: true
+        
+      - name: Init terraform
+        run: terraform init
+        
+      - name: Run main_tf terraform
+        run: terraform apply
+        
+
 
