--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,11 +66,15 @@ jobs:
         
     - name: Run main_tf terraform
       run: terraform apply -auto-approve
-        
+
+    - name: Conda show all envs
+      run: conda info --envs
+
     # Test import of packages from environments
     
     - name: test R_py_39
       run: |
         conda activate R_py_39
         python3 test_yml/test_jupyter.py
+        conda deactivate
 
