--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,12 +58,12 @@ jobs:
     - name: Install mamba
       run: conda install -c conda-forge mamba
       
-    - name: remove conda cache
-      run: rm -rf /home/runner/conda_pkgs_dir/cache
-      
     - name: Init terraform
       run: terraform init
-        
+      
+    - name: remove conda cache
+      run: rm -rf /home/runner/conda_pkgs_dir/cache/*
+      
     - name: Run main_tf terraform
       run: terraform apply -auto-approve
 
