--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,9 @@ jobs:
     - name: Install mamba
       run: conda install -c conda-forge mamba
       
+    - name: Set path to conda folder
+      run: cd conda/
+      
     - name: Init terraform
       run: terraform init
       
