--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,10 @@ jobs:
       run: conda install -c conda-forge mamba
       
     - name: Set path to conda folder
-      run: cd conda/
+      run: cd IaC_os_server/conda/
+
+    - name: Show current location
+      run: ls -a
       
     - name: Init terraform
       run: terraform init
